# prop_line_analysis

./: .dockerignore  .env.example  .gitignore  .railway-deploy-checklist.md  API_DATA_SOURCES.md  DATA_COLLECTION_SUMMARY.md  DEBUG_RAILWAY.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_FRONTEND.md  Dockerfile  EVENT_ID_MAPPING_STATUS.md  FRONTEND_DASHBOARD_GUIDE.md  FRONTEND_SUMMARY.md  GETTING_STARTED.md  HISTORICAL_DATA_GUIDE.md  MOCK_DATA_GUIDE.md  MOCK_DATA_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  RAILWAY_HEALTHCHECK_FIX.md  RAILWAY_QUICKSTART.md  RAILWAY_TROUBLESHOOTING.md  README.md  SCRAPER_UPDATE_NOTES.md  TABLE_CREATION_SETUP.md  TESTING_WITH_PAST_DATA.md  WEEK_PARAMETER_SUMMARY.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml  railway.toml  requirements.txt  run.py  start.sh
alembic/: env.py
alembic/versions/: 09d0389c0b53_initial_tables.py  a1b2c3d4e5f6_add_individual_book_odds.py  b2c3d4e5f6g7_add_sportsbook_timestamps.py  c3d4e5f6g7h8_add_performance_indexes.py
frontend/: .dockerignore  Dockerfile  index.html  nixpacks.toml  package.json  railway.toml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
mock_data/: prop_snapshots.json
scripts/: check_available_markets.py  check_odds.py  fetch_historical_data.py  fetch_live_odds.py  load_mock_data.py  run_scraper.py  test_api.py  test_event_mapping.py
src/: __init__.py  config.py
src/analysis/: __init__.py  correlation.py  line_movement.py
src/api/: main.py
src/collectors/: __init__.py  bettingpros.py  espn.py  (+2 more)
(+17 files in other folders)
